# streamlog

./: .gitignore  CMakeLists.txt  Portfile  log.cpp  log.h  streamlog.cpp  streamlog.h
log/: log.1  main.cpp
log.xcodeproj/: project.pbxproj
log.xcodeproj/project.xcworkspace/xcuserdata/nathanwehr.xcuserdatad/: UserInterfaceState.xcuserstate
log.xcodeproj/xcuserdata/nathanwehr.xcuserdatad/xcschemes/: liblog.xcscheme  log.xcscheme  xcschememanagement.plist
